--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </a>
     <a href="fr2.mp4">
       <button class="button1">
-        <p class="click">Appuie :D</p>
+        <p class="click">Ici aussi :D</p>
       </button>
     </a>
   </div>
